# letisko-online-mobile

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  address.cpp  aircraft_categories_controller.cpp  aircraft_categories_controller.h  aircrafts_controller.cpp  aircrafts_controller.h  aircrafts_filter_proxy_model.cpp  aircrafts_filter_proxy_model.h  aircrafts_model.cpp  constants.cpp  constants.h  filtering_roles.h  flight_info.cpp  flight_info.h  flight_request_status.cpp  flight_request_status.h  flights_controller.cpp  flights_controller.h  flights_filter_proxy_model.cpp  flights_filter_proxy_model.h  flights_model.cpp  flights_model.h  flights_roles.h  language_manager.cpp  language_manager.h  lo_style.h  login.cpp  login.h  lostyle.h  personal_info.cpp  personal_info.h  pixmap_provider.cpp  pixmap_provider.h  request_constants.cpp  request_constants.h  server_connection_checker.cpp  server_sent_events_parser.cpp  (+5 more)
android/: AndroidManifest.xml
assets/fonts/: fonts.qrc
assets/icons/: icons.qrc
assets/images/: images.qrc
assets/translations/: sk_SK.qm  sk_SK.ts  slovak.ts  translations.qrc
core/: ComponentCreatorEngine.cpp
cpp/: constants.cpp  language_manager.cpp  language_manager.h  server_connection_checker.cpp  server_connection_checker.h  server_sent_events_parser.h  user_controller.cpp  user_controller.h
cpp/aircraft/: aircraft_info.cpp  aircraft_info.h  aircrafts_controller.cpp  aircrafts_controller.h  aircrafts_filter_proxy_model.cpp  aircrafts_model.cpp  aircrafts_model.h  aircrafts_roles.h
cpp/flight/: flights_controller.cpp  flights_filter_proxy_model.cpp  flights_filter_proxy_model.h  flights_roles.h
cpp/user/: address.h  personal_info.cpp  user.cpp
hotreload/: ComponentCreatorEngine.cpp  ComponentCreatorEngine.h  FileWatcher.cpp  FileWatcher.h
qml/: Main.qml  MainWindow.qml  UserAppSettings.qml  configurations.qrc  qtquickcontrols2.conf
qml/components/: AircraftStrip.qml  DocumentationStrip.qml  DrawerItem.qml  EmailTextField.qml  FilterButton.qml  FlightFilterPopUp.qml  FlightStatus.qml  FlightStatusChip.qml  FlightStrip.qml  FlightsSortingBar.qml  FligthStatusCombobox.qml  ListItem.qml  Logo.qml  MaterialButton.qml  PasswordField.qml  PasswordRequirements.qml  PopupBusyIndicator.qml  PopupParent.qml  RoundedImage.qml  SearchBar.qml  ServerConnectionProblem.qml  SettingStrip.qml  SortingBar.qml  SortingButton.qml  SortingSection.qml  ToolBarNameButton.qml
qml/components/colors/: ColorsLight.qml
qml/components/divider/: HorizontalDividerSubhead.qml
qml/components/typography/body/input/: BodyLargeInput.qml
qml/components/typography/body/text/: BodyLargeText.qml  BodyMediumText.qml  BodySmallText.qml
qml/components/typography/display/text/: DisplaySmallText.qml
qml/components/typography/headline/: HeadlineMedium.qml
qml/components/typography/headline/text/: HeadlineLargeText.qml  HeadlineMediumText.qml  HeadlineSmallText.qml
qml/components/typography/label/: LabelLargeProminent.qml
qml/components/typography/label/text/: LabelLargeProminentText.qml  LabelLargeText.qml
qml/components/typography/title/: TitleLarge.qml
qml/components/typography/title/text/: TitleMediumText.qml  TitleSmallText.qml
qml/screens/: AircraftsScreen.qml  DocumentationScreen.qml  Flights.qml  FlightsScreen.qml  LoginScreen.qml  MainScreen.qml  RegistrationDetailsScreen.qml  RegistrationScreen.qml  SettingsScreen.qml
